Fix prices and overflow-y

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -19,7 +19,7 @@ aside {
   position: fixed;
   top: 10vh;
   bottom: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #content {
